force-app/main/default/objects/Train_Booking__c/Train_Booking__c.object-meta.xml
<CustomObject>
    <label>Train Booking</label>
    <nameField>
        <displayFormat>TBN - {0000}</displayFormat>
        <label>Train Booking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Train Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>