force-app/main/default/objects/Train_Booking__c/fields/Additional_Booking_Count__c.field-meta.xml
<CustomField>
    <fullName>Additional_Booking_Count__c</fullName>
    <description>This field is used to store the count of passengers</description>
    <label>Additional Booking Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>