force-app/main/default/objects/Train_Booking__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>This method is used to store the email of the traveller</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>