force-app/main/default/objects/Train_Booking__c/fields/Fare__c.field-meta.xml
<CustomField>
    <fullName>Fare__c</fullName>
    <description>This field is used to store the cost of travel</description>
    <label>Fare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>