force-app/main/default/objects/Train_Booking__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <description>This field is used to store From Address</description>
    <label>From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coimbatore</fullName>
            </value>
            <value>
                <fullName>Kochi</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>