force-app/main/default/objects/Train_Booking__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>This field is used to store the booking User name</description>
    <label>Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>