force-app/main/default/objects/Train_Booking__c/fields/Train_Name__c.field-meta.xml
<CustomField>
    <fullName>Train_Name__c</fullName>
    <label>Train Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coimbatore Express</fullName>
            </value>
            <value>
                <fullName>Chennai Express</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>