force-app/main/default/objects/Train_Booking__c/fields/Travelling_Date__c.field-meta.xml
<CustomField>
    <fullName>Travelling_Date__c</fullName>
    <description>Used to identify when travelling</description>
    <label>Travelling Date</label>
    <type>Date</type>
</CustomField>